--- a/src/main/resources/assets/firstmod/lang/en_us.json
+++ b/src/main/resources/assets/firstmod/lang/en_us.json
@@ -1,4 +1,6 @@
 {
     "item.firstmod.ruby": "Ruby",
-    "item.firstmod.raw_ruby": "Raw Ruby"
+    "item.firstmod.raw_ruby": "Raw Ruby",
+
+    "itemgroup.ruby": "Rubies"
 }
