--- a/src/main/resources/assets/firstmod/lang/en_us.json
+++ b/src/main/resources/assets/firstmod/lang/en_us.json
@@ -2,5 +2,7 @@
     "item.firstmod.ruby": "Ruby",
     "item.firstmod.raw_ruby": "Raw Ruby",
 
+    "block.firstmod.ruby_block": "Block of Ruby",
+
     "itemgroup.ruby": "Rubies"
 }
